tests/build/fail/no-args-attr.rs
use ref_destruct::*;

#[ref_destruct]
struct MyStruct {
    x: i32,
}

fn main() {}